# agentops-open-course

./: .env.example  .gitignore  .sops.yaml  .trivyignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROMPT.md  README.md  SECURITY.md  dprint.json  lefthook.yml  mise.toml  mkdocs.yml  pyproject.toml  renovate.json5  trivy.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  docs-freshness.md  docs.yml  feature.yml
.github/workflows/: ci.yml  docs.yml  eval.yml  freshness.yml  release.yml  renovate.yml  scan.yml
agents/: .dockerignore  README.md
agents/data/: README.md  incidents.db  mise.toml
agents/data/runbooks/: cascade-failure.md  deployment-rollback.md  disk-full.md  elevated-errors.md  high-latency.md  memory-leak.md  service-down.md
agents/data/sql/: schema.sql  seed.sql
agents/go/: .env.example  .golangci.yml  README.md  go.mod  go.sum  mise.toml
agents/go/evals/: README.md
agents/go/tests/: actions_test.go  agent_test.go  data_test.go  delegation_test.go  mcpclient_test.go  memory_test.go  skills_test.go  tools_test.go  workflow_test.go
agents/python/: .env.example  Dockerfile  README.md  mise.toml  pyproject.toml
agents/python/evals/: README.md  __init__.py  cost_eval.py  groundedness_eval.py  mlflow_eval.py  ops.evalset.json  prompt_ab.py  report_eval.py  retrieval_eval.py  triage-report.evalset.json
agents/python/src/agent/: __init__.py  actions.py  agent.py  budget.py  circuit.py  compaction.py  config.py  config_check.py  data.py  delegation.py  guardrails.py  longterm.py  mcp_client.py  mcp_server.py  memory.py  model.py  models.py  pii.py  report.py  resilience.py  retrieval.py  server.py  skills.py  telemetry.py  tools.py  workflow.py
agents/python/src/agent/structured_report/: __init__.py  agent.py
agents/python/tests/: conftest.py  test_actions.py  test_budget.py  test_circuit.py  test_compaction.py  test_config.py  test_cost_eval.py  test_data.py  test_delegation.py  test_evalset.py  test_groundedness_eval.py  test_import_boundaries.py  test_longterm.py  test_mcp.py  test_memory.py  test_mlflow_eval.py  test_model.py  test_pii.py  test_prompt_ab.py  test_properties.py  test_report.py  test_resilience.py  test_retrieval.py  test_security.py  test_server.py  test_skills.py  test_smoke.py  test_telemetry.py  test_tools.py  test_workflow.py
clients/: LICENSE
clients/web/: README.md  index.html
docs/: CNAME  index.md
docs/0. Overview/: 0.0. Course.md  0.1. Agents.md  0.2. AgentOps.md  0.3. Ecosystem.md  0.4. Languages.md  0.4. Providers.md  0.5. Providers.md  0.5. Resources.md  0.6. Resources.md  0.6. Troubleshooting.md  0.7. Glossary.md  index.md
docs/1. Setup/: 1.0. System.md  1.1. Python.md  1.2. Containers.md  1.2. Go.md  1.3. Containers.md  1.3. Kubernetes.md  1.4. Kubernetes.md  1.4. Providers.md  1.5. Providers.md  1.5. Workspace.md  1.6. Workspace.md  index.md
docs/2. Agents/: 2.0. Concepts.md  2.1. First Agent (Python).md  2.1. First Agent.md  2.2. First Agent (Go).md  2.2. Models.md  2.3. Instructions.md  2.3. Models.md  2.4. Instructions.md  2.4. Sessions.md  2.5. Dev Loop.md  2.5. Sessions.md  2.6. Dev Loop.md  index.md
docs/3. Capabilities/: 3.0. Packaging.md  3.1. Tools.md  3.2. Skills.md  3.3. MCP.md  3.4. Memory.md  3.5. Workflows.md  3.6. A2A.md  3.7. Multi-Agent.md  index.md
docs/4. Quality/: 4.0. Typing.md  4.1. Linting.md  4.2. Testing.md  4.3. Metrics.md  4.4. Evaluations.md  4.5. Guardrails.md  4.6. Security.md  index.md
docs/5. Gateway/: 5.0. Gateway.md  5.1. Gateway Setup.md  5.2. MCP Gateway.md  5.3. A2A Gateway.md  5.4. Model Gateway.md  5.5. Gateway Security.md  5.6. Gateway Observability.md  index.md
docs/6. Platform/: 6.0. Platform.md  6.1. Containers.md  6.2. Platform Install.md  6.3. Platform Agents.md  6.4. Platform Tools.md  6.5. Platform Gateway.md  6.6. Platform Delivery.md  6.7. Progressive Delivery.md  index.md
docs/7. Observability/: 7.0. Reproducibility.md  7.1. Tracing.md  7.2. Monitoring.md  7.3. Costs.md  7.4. Feedback.md  7.5. Online Evaluation.md  7.6. Governance.md  7.7. Incident Response.md  index.md
docs/8. Community/: 8.0. Repository.md  8.1. License.md  8.2. Releases.md  8.3. Templates.md  8.4. Documentation.md  8.5. Contributions.md  8.6. AAIF.md  8.7. Capstone.md  index.md
docs/assets/: .gitkeep
docs/stylesheets/: extra.css
infra/: README.md  helmfile.yaml  k3d.yaml  skaffold.yaml
infra/agentgateway/: config.yaml
infra/agentgateway/gke/: config.yaml
infra/agentgateway/host/: config-auth.yaml  config.yaml
infra/agentgateway/k3d/: config.yaml  kustomization.yaml
infra/gcp/: .terraform.lock.hcl  README.md  iam.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/k8s/: ingress.yaml  namespace.yaml
infra/k8s/base/: agent-state.yaml  agentgateway-client.yaml  agentgateway.yaml  kustomization.yaml  loki-config.yaml  loki.yaml  mcp.yaml  mlflow.yaml  namespace.yaml  (+6 more)
infra/kagent/: agent.yaml  kustomization.yaml  modelconfig.yaml  toolserver.yaml  values.yaml
infra/mlflow/: .dockerignore  Dockerfile  entrypoint.py  entrypoint.sh  initialize.py  pyproject.toml
infra/observability/: README.md  alertmanager.yml  compose.yaml  loki.yaml  otel-collector.yaml  prometheus-rules.yml  prometheus.yml
infra/scripts/: backup-drill.sh  backup-state.sh  check-state.sh  gateway-host.sh  gateway-jwt.sh  gateway-tls.sh  loopback-relay.py  restore-state.sh  secrets.sh
load/: LICENSE  README.md  a2a-send.js  fake_model.py  health.js  mcp-read.js
scripts/: check-docs.sh  check-infra.sh  check-licenses.sh  check-release-metadata.sh  check-skills.sh  check_frontmatter.py  cluster-start.sh  doctor.sh  install-helm-diff.sh  promote.sh  smoke-host.sh
skills/: README.md
skills/agent-evaluation/: SKILL.md
skills/agent-guardrails/: SKILL.md
skills/agent-incident-response/: SKILL.md
skills/agent-least-privilege/: SKILL.md
skills/agent-resilience/: SKILL.md
skills/agent-token-budget/: SKILL.md
skills/agentops-course/: SKILL.md
skills/agentops-telemetry/: SKILL.md
(+28 files in other folders)
